# handom

./: .gitmodules  .travis.yml  ChangeLog.md  LICENSE  Readme.md  handom.cabal
src/: Main.hs
src/Generator/: Isaac.hs  Lehmer.hs  MWC.hs  PCG.hs  SplitMix.hs  Xorshift128Plus.hs
