-- The name of the package.
name:                handom

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Collection of Pseudo-Random-Number Generators

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/befedo/handom

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Marc Ludwig

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          ludwig.marc@gmx.net

-- A copyright notice.
-- copyright:

category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable handom
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       Generator.Isaac, Generator.SplitMix, Generator.Xorshift128Plus

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    MagicHash, UnboxedTuples, BangPatterns

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.10 && <4.11, options >=1.2 && <1.3, array >=0.5 && <0.6

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

