-- The name of the package.
name:                handom

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Collection of Pseudo-Random-Number Generators

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/befedo/handom

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Marc Ludwig

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          ludwig.marc@gmx.net

-- A copyright notice.
-- copyright:

category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable handom
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       Generator.Lehmer
                       Generator.PCG
                       Generator.SplitMix
                       Generator.Xorshift128Plus
                       Generator.Isaac
                       System.Random.Lehmer.Base
                       System.Random.Lehmer.Constants
                       System.Random.Lehmer.Util
                       System.Random.Lehmer.State
                       System.Random.PCG
                       System.Random.PCG.Pure
                       System.Random.PCG.Class
                       System.Random.PCG.Fast
                       System.Random.PCG.Fast.Pure
                       System.Random.PCG.Unique
                       System.Random.PCG.Single

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    MagicHash, UnboxedTuples, BangPatterns, CPP, ForeignFunctionInterface

  -- Other library packages from which modules are imported.
  build-depends:       base        >=4.10 && <4.11,
                       options     >=1.2 && <1.3,
                       array       >=0.5 && <0.6,
                       primitive   >=0.4 && < 0.7,
                       random      >=1.0 && < 2.0,
                       cmdargs,
                       binary,
                       bytestring,
                       entropy,
                       mtl

  -- Directories containing source files.
  hs-source-dirs:      src, src/haskell-lehmer, src/pcg-random/src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  cc-options:
    -DMEXP=19937
    -DNDEBUG
    -finline-functions -fomit-frame-pointer
    -fno-strict-aliasing
    -std=c99 -fPIC

  c-sources:
    src/pcg-random/c/pcg-advance-128.c
    src/pcg-random/c/pcg-advance-64.c
    src/pcg-random/c/pcg-global-64.c
    src/pcg-random/c/pcg-output-64.c
    src/pcg-random/c/pcg-rngs-64.c
  include-dirs:        src/pcg-random/c

  includes:            pcg_variants.h

  install-includes:    pcg_variants.h
